Fixed horizontal overflow caused by carousel

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -46,3 +46,5 @@
 .prev { padding: 3px;}
 .first { padding: 3px;}
 #top-bar { background-color: white;}
+
+body {overflow-x: hidden;} /* prevent horizontal scrollbar (caused by Slick's carousel track having a virtual width of 50000) */
